# uwreact_robot

./: .clang-format  .clang-tidy  .gitignore  .pylintrc  .style.yapf  .travis.yml  CONTRIBUTING.md  LICENSE  README.md  run_clang_tidy.py  run_linters.py  uwreact_robot.rosinstall
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1_BUG_REPORT.md  2_FEATURE_REQUEST.md  3_DOCUMENTATION_ERROR.md  4_META_ISSUE.md  4_QUESTION.md  5_META_ISSUE.md
network_visualizer/: CMakeLists.txt  package.xml  setup.py
network_visualizer/scripts/: open_network_visualizer  window.py
network_visualizer/src/: window.py
network_visualizer/src/network_visualizer/: window.py
scripts/: run_linters.py
uwreact_bringup/: CMakeLists.txt  package.xml
uwreact_bringup/config/: rosconsole_debug.config
uwreact_bringup/launch/: bringup.launch  perception.launch  zeds.launch
uwreact_bringup/launch/configs/: zed.yaml
uwreact_bringup/launch/controls/: controls.launch  spawn_robot.launch
uwreact_bringup/launch/perception/: perception.launch  zeds.launch
uwreact_controls/uwreact_controls/: CMakeLists.txt  package.xml
uwreact_description/: CMakeLists.txt  package.xml
uwreact_description/config/: 2019_robot.yaml
uwreact_description/launch/: display.launch
uwreact_description/urdf/2019/: parameters.xacro  robot.xacro
uwreact_description/urdf/common/: gazebo.xacro  materials.xacro  simple_shapes.xacro
uwreact_description/worlds/: empty.world  frc2016.world
uwreact_msgs/: CMakeLists.txt  package.xml
uwreact_msgs/msg/: EntityArray.msg  FieldState.msg  GenericEntity.msg  RobotEntity.msg
uwreact_perception/perception_bringup/: CMakeLists.txt  package.xml
uwreact_perception/perception_bringup/launch/: main_perception.launch  zeds.launch
uwreact_perception/perception_localization/: CMakeLists.txt  package.xml
uwreact_perception/perception_localization/launch/: perception_localization.launch
uwreact_perception/uwreact_perception/: CMakeLists.txt  package.xml
uwreact_planning/network_visualizer/: CMakeLists.txt  package.xml  setup.py
uwreact_planning/network_visualizer/scripts/: network_visualizer  open_network_visualizer
uwreact_planning/network_visualizer/src/network_visualizer/: window.py
uwreact_planning/uwreact_planning/: CMakeLists.txt  package.xml
uwreact_robot/: CMakeLists.txt  package.xml
