<?xml version="1.0"?>
<package format="2">
  <name>uwreact_bringup</name>
  <version>0.0.0</version>
  <description>roslaunch scripts for starting UW REACT's fully autonomous FIRST robots</description>

  <maintainer email="maintainers@uwreact.ca">UW REACT Software Team</maintainer>

  <license>BSD-3</license>

  <url type="website">https://uwreact.ca</url>
  <url type="bugtracker">https://github.com/uwreact/uwreact_robot/issues</url>
  <url type="repository">https://github.com/uwreact/uwreact_robot</url>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- General dependencies -->
  <exec_depend>uwreact_description</exec_depend>

  <!-- Controls dependencies -->
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>frc_robot_hw</exec_depend>
  <exec_depend>frc_robot_sim</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <!-- Perception dependencies -->
  <exec_depend>zed_wrapper</exec_depend>
  <exec_depend>depthimage_to_laserscan</exec_depend>

  <!-- Planning dependencies -->

</package>
