<?xml version="1.0"?>
<package format="2">
  <name>uwreact_msgs</name>
  <version>0.0.0</version>
  <description>State-tracking messages to be used throughout UW REACT's fully autonomous FIRST robots</description>

  <maintainer email="maintainers@uwreact.ca">UW REACT Software Team</maintainer>

  <license>BSD-3</license>

  <url type="website">https://uwreact.ca</url>
  <url type="bugtracker">https://github.com/uwreact/uwreact_robot/issues</url>
  <url type="repository">https://github.com/uwreact/uwreact_robot</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>std_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
