<?xml version="1.0"?>
<package format="2">
  <name>uwreact_robot</name>
  <version>0.0.0</version>
  <description>The software behind UW REACT's fully autonomous FIRST robots</description>

  <maintainer email="maintainers@uwreact.ca">UW REACT Software Team</maintainer>

  <license>BSD-3</license>

  <url type="website">https://uwreact.ca</url>
  <url type="bugtracker">https://github.com/uwreact/uwreact_robot/issues</url>
  <url type="repository">https://github.com/uwreact/uwreact_robot</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>uwreact_bringup</exec_depend>
  <exec_depend>uwreact_controls</exec_depend>
  <exec_depend>uwreact_description</exec_depend>
  <exec_depend>uwreact_perception</exec_depend>
  <exec_depend>uwreact_planning</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
