<?xml version="1.0"?>
<package format="2">
  <name>uwreact_controls</name>
  <version>0.0.0</version>
  <description>The controls software behind UW REACT's fully autonomous FIRST robots</description>

  <maintainer email="maintainers@uwreact.ca">UW REACT Software Team</maintainer>

  <license>BSD-3</license>

  <url type="website">https://uwreact.ca</url>
  <url type="bugtracker">https://github.com/uwreact/uwreact_robot/issues</url>
  <url type="repository">https://github.com/uwreact/uwreact_robot</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>frc_control</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
