<?xml version="1.0"?>
<package format="2">
  <name>network_visualizer</name>
  <version>0.0.0</version>
  <description>GUI for visualizing UW React path planning Neural Network</description>

  <maintainer email="maintainers@uwreact.ca">UW React Software Team</maintainer>

  <license>BSD-3</license>

  <url type="website">http://uwreact.ca</url>
  <url type="bugtracker">http://github.com/uwreact/uwreact_robot/issues</url>
  <url type="repository">http://github.com/uwreact/uwreact_robot/</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>python_qt_binding</depend>

</package>
